--- a/frontend/js/tsconfig.json
+++ b/frontend/js/tsconfig.json
@@ -11,6 +11,6 @@
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
